--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ script:
   - curl -s https://get.sdkman.io | bash
   - source "/home/travis/.sdkman/bin/sdkman-init.sh"
   - sdk install kotlin
-  - kotlinc src/App.kt -include-runtime -d app.jar
+  - kotlinc test.kt -include-runtime -d app.jar
   - java -jar app.jar
